[gd_scene load_steps=19 format=3 uid="uid://tk4c25rwhw0q"]

[ext_resource type="Script" path="res://screens/sub_menus/market_menu/market_menu.gd" id="1_vrx16"]
[ext_resource type="Texture2D" uid="uid://1hytjmdd1qwd" path="res://screens/sub_menus/market_menu/assets/market_background.png" id="2_p0k5p"]
[ext_resource type="Texture2D" uid="uid://gnuhcgqn5pdp" path="res://screens/sub_menus/market_menu/assets/lamplight.png" id="3_ax87c"]
[ext_resource type="Texture2D" uid="uid://cjgjnvdvgceab" path="res://assets/screens/shared_assets/go_back_2.png" id="4_ftdnd"]
[ext_resource type="Texture2D" uid="uid://jwmwcyqtv2kh" path="res://assets/screens/shared_assets/go_back_1.png" id="5_tpf87"]
[ext_resource type="AudioStream" uid="uid://cc7rpmevwkpyo" path="res://assets/audio/sfx/buttons_sfx/click_2.mp3" id="6_vlbpn"]
[ext_resource type="PackedScene" uid="uid://1c7quxy7mj4w" path="res://screens/sub_menus/market_menu/products_container/products_container.tscn" id="7_bd58r"]
[ext_resource type="Script" path="res://global_objects/audio_players/sfx_player.gd" id="7_xbif4"]
[ext_resource type="PackedScene" uid="uid://cfb8cp51xqjwy" path="res://screens/sub_menus/market_menu/products_container/buy_product_button/buy_product_button.tscn" id="8_37i6p"]
[ext_resource type="PackedScene" uid="uid://lok4k6ydetes" path="res://screens/sub_menus/market_menu/products_container/products_container_grid.tscn" id="8_bdblj"]
[ext_resource type="Texture2D" uid="uid://b8b0dliakxqy1" path="res://screens/sub_menus/market_menu/assets/7th_slot_bag.png" id="9_cce85"]
[ext_resource type="PackedScene" uid="uid://ds50m5bk5qstt" path="res://global_objects/user_balance_displayer/user_balance_displayer.tscn" id="10_4818i"]
[ext_resource type="Texture2D" uid="uid://0ec2ysu7nywy" path="res://screens/sub_menus/market_menu/assets/market_sign.png" id="11_f3rps"]
[ext_resource type="Texture2D" uid="uid://2rgr62hf2b7h" path="res://screens/sub_menus/market_menu/assets/7th_slot_bag_selected.png" id="11_sdnrc"]
[ext_resource type="Script" path="res://screens/sub_menus/market_menu/market_menu_controller.gd" id="13_88w2g"]
[ext_resource type="PackedScene" uid="uid://bvjpuifgrxmm5" path="res://screens/sub_menus/market_menu/products_container/product_popup/product_popup.tscn" id="16_gkwgb"]

[sub_resource type="Animation" id="Animation_si3n5"]
resource_name = "_sign_down"
length = 1.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarketSign:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.7, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(880, -116), Vector2(880, 108), Vector2(880, 96.8), Vector2(880, 108)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Lamplight:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.9, 1.1, 1.2, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0.5), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n7hw3"]
_data = {
"_sign_down": SubResource("Animation_si3n5")
}

[node name="MarketMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vrx16")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("2_p0k5p")

[node name="Lamplight" type="Sprite2D" parent="."]
position = Vector2(237, 291)
texture = ExtResource("3_ax87c")

[node name="GoBackButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 1752.0
offset_top = 16.0
offset_right = 1902.0
offset_bottom = 132.0
texture_normal = ExtResource("4_ftdnd")
texture_pressed = ExtResource("5_tpf87")
texture_hover = ExtResource("5_tpf87")
texture_focused = ExtResource("5_tpf87")
flip_h = true

[node name="SFXPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_vlbpn")
script = ExtResource("7_xbif4")

[node name="ProductsContainerGrid" parent="." instance=ExtResource("8_bdblj")]
layout_mode = 1

[node name="GridContainer" parent="ProductsContainerGrid" index="0"]
offset_left = 333.0
offset_top = 89.0
offset_right = 546.0
offset_bottom = 302.0
theme_override_constants/h_separation = 600
theme_override_constants/v_separation = 60

[node name="Row1Col1" parent="ProductsContainerGrid/GridContainer" index="0" instance=ExtResource("8_37i6p")]
layout_mode = 2
texture_normal = ExtResource("9_cce85")
texture_pressed = ExtResource("11_sdnrc")
texture_hover = ExtResource("11_sdnrc")
texture_focused = ExtResource("11_sdnrc")
product_name = "7SlotsUpgrade"
product_price = 300
product_thumbnail = ExtResource("9_cce85")
product_text = "Unlock 7 Slots"
product_description = "extra slot:                             allows you to have one extra slot in the ally selector."

[node name="Row1Col2" parent="ProductsContainerGrid/GridContainer" index="1" instance=ExtResource("8_37i6p")]
layout_mode = 2
texture_normal = ExtResource("9_cce85")
texture_pressed = ExtResource("11_sdnrc")
texture_hover = ExtResource("11_sdnrc")
texture_focused = ExtResource("11_sdnrc")
product_name = "7SlotsUpgrade"
product_price = 300
product_thumbnail = ExtResource("9_cce85")
product_text = "Unlock 7 Slots"
product_description = "extra slot:                             allows you to have one extra slot in the ally selector."

[node name="Row2Col1" parent="ProductsContainerGrid/GridContainer" index="2" instance=ExtResource("8_37i6p")]
layout_mode = 2
texture_normal = ExtResource("9_cce85")
texture_pressed = ExtResource("11_sdnrc")
texture_hover = ExtResource("11_sdnrc")
texture_focused = ExtResource("11_sdnrc")
product_name = "7SlotsUpgrade"
product_price = 300
product_thumbnail = ExtResource("9_cce85")
product_text = "Unlock 7 Slots"
product_description = "extra slot:                             allows you to have one extra slot in the ally selector."

[node name="Row2Col2" parent="ProductsContainerGrid/GridContainer" index="3" instance=ExtResource("8_37i6p")]
layout_mode = 2
texture_normal = ExtResource("9_cce85")
texture_pressed = ExtResource("11_sdnrc")
texture_hover = ExtResource("11_sdnrc")
texture_focused = ExtResource("11_sdnrc")
product_name = "7SlotsUpgrade"
product_price = 300
product_thumbnail = ExtResource("9_cce85")
product_text = "Unlock 7 Slots"
product_description = "extra slot:                             allows you to have one extra slot in the ally selector."

[node name="Row3Col1" parent="ProductsContainerGrid/GridContainer" index="4" instance=ExtResource("8_37i6p")]
layout_mode = 2
texture_normal = ExtResource("9_cce85")
texture_pressed = ExtResource("11_sdnrc")
texture_hover = ExtResource("11_sdnrc")
texture_focused = ExtResource("11_sdnrc")
product_name = "7SlotsUpgrade"
product_price = 300
product_thumbnail = ExtResource("9_cce85")
product_text = "Unlock 7 Slots"
product_description = "extra slot:                             allows you to have one extra slot in the ally selector."

[node name="Row3Col2" parent="ProductsContainerGrid/GridContainer" index="5" instance=ExtResource("8_37i6p")]
layout_mode = 2
texture_normal = ExtResource("9_cce85")
texture_pressed = ExtResource("11_sdnrc")
texture_hover = ExtResource("11_sdnrc")
texture_focused = ExtResource("11_sdnrc")
product_name = "7SlotsUpgrade"
product_price = 300
product_thumbnail = ExtResource("9_cce85")
product_text = "Unlock 7 Slots"
product_description = "extra slot:                             allows you to have one extra slot in the ally selector."

[node name="ProductsContainer" parent="." instance=ExtResource("7_bd58r")]
visible = false
layout_mode = 0
offset_left = 332.0
offset_top = 91.0
offset_right = 549.0
offset_bottom = 304.0

[node name="BuyProductButton" parent="ProductsContainer" instance=ExtResource("8_37i6p")]
layout_mode = 2
texture_normal = ExtResource("9_cce85")
texture_pressed = ExtResource("11_sdnrc")
texture_hover = ExtResource("11_sdnrc")
texture_focused = ExtResource("11_sdnrc")
product_name = "7SlotsUpgrade"
product_price = 300
product_thumbnail = ExtResource("9_cce85")
product_text = "Unlock 7 Slots"
product_description = ""

[node name="UserBalanceDisplayer" parent="." instance=ExtResource("10_4818i")]
position = Vector2(19, 22)

[node name="MarketSign" type="Sprite2D" parent="."]
position = Vector2(880, 108)
texture = ExtResource("11_f3rps")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_n7hw3")
}
autoplay = "_sign_down"

[node name="MarketMenuController" type="Node" parent="."]
script = ExtResource("13_88w2g")

[node name="ProductPopup" parent="." instance=ExtResource("16_gkwgb")]
visible = false
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1

[connection signal="pressed" from="GoBackButton" to="." method="_on_go_back_button_pressed"]

[editable path="ProductsContainerGrid"]
